--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,15 +10,15 @@
     "react-scripts": "^1.1.5"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+     // "react-app/jest"
     ]
   },
   "devDependencies": {
